feat: Implement Cross-Origin Isolation and diagnostics
Integrates the COI Service Worker to ensure Cross-Origin Isolation (COI) is enabled, which is crucial for advanced web features like SharedArrayBuffer.

Adds global error handling to log critical resource loading failures, providing specific guidance when COI might be the cause. Includes checks and warnings for SharedArrayBuffer availability and COI status, informing the user about potential performance or feature limitations.

Updates Lumina's image shape utility and shader engine to include new image processing parameters like grain size, aperture, focus distance, and bokeh brightness, enhancing visual manipulation capabilities.

Introduces a compatibility modal in Lumina Studio to inform users about browser compatibility issues related to COI and other security features, offering guidance on how to resolve them.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="manifest" href="/manifest.webmanifest">
+    <script src="https://cdn.jsdelivr.net/gh/gzuidhof/coi-serviceworker@latest/coi-serviceworker.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     
