--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     "@uppy/react": "https://esm.sh/@uppy/react@3.3.1",
     "@uppy/image-editor": "https://esm.sh/@uppy/image-editor@2.4.2",
     "@uppy/compressor": "https://esm.sh/@uppy/compressor@1.1.2",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "vite-plugin-pwa": "https://esm.sh/vite-plugin-pwa@^1.2.0"
+    "vite-plugin-pwa": "https://esm.sh/vite-plugin-pwa@^1.2.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -71,13 +71,12 @@
     <script type="module" src="./src/index.tsx"></script>
 
     <script type="module">
-        // Captura de erro silenciosa para não quebrar o layout
         window.addEventListener('error', (e) => {
             if (e.message.includes('MIME')) {
                 console.warn('Tentando fallback de carregamento...');
                 const s = document.createElement('script');
                 s.type = 'module';
-                s.src = './index.tsx'; // Tenta carregar da raiz se a pasta src falhar
+                s.src = './index.tsx';
                 document.body.appendChild(s);
             }
         });
